# gottet

./: .gitignore  CMakeLists.txt  CREDITS  ChangeLog  INSTALL  NEWS  README  gottet.pro  icon.qrc  mac_deploy.sh  windows_deploy.bat
doc/: gottet.6
icons/: gottet.appdata.xml  gottet.appdata.xml.in  gottet.desktop  gottet.desktop.in  gottet.icns  gottet.xpm  icon.qrc  icon.rc
icons/po/: LINGUAS  ca.po  cs.po  de.po  description.pot  el.po  es.po  et.po  fr.po  he.po  ko.po  lt.po  ms.po  nl.po  pl.po  pt.po  ro.po  ru.po  tr.po  update-po.sh  update-pot.sh  vi.po  zh.po  zh_TW.po
mac/: Info.plist.in
src/: board.cpp  board.h  locale_dialog.cpp  locale_dialog.h  main.cpp  piece.cpp  piece.h  score_board.cpp  score_board.h  scores_dialog.cpp  scores_dialog.h  window.cpp  window.h
translations/: gottet_ca.qm  gottet_ca.ts  gottet_cs.qm  gottet_cs.ts  gottet_de.qm  gottet_de.ts  gottet_el.ts  gottet_en.ts  gottet_es.qm  gottet_es.ts  gottet_et.ts  gottet_fr.qm  gottet_fr.ts  gottet_he.qm  gottet_he.ts  gottet_it.ts  gottet_ko.qm  gottet_ko.ts  gottet_lt.qm  gottet_lt.ts  gottet_ms.qm  gottet_ms.ts  gottet_nl.qm  gottet_nl.ts  gottet_pl.qm  gottet_pl.ts  gottet_pt.ts  gottet_ro.qm  gottet_ro.ts  gottet_ru.qm  gottet_ru.ts  gottet_tr.qm  gottet_tr.ts  gottet_vi.qm  gottet_vi.ts  gottet_zh.ts  gottet_zh_TW.qm  gottet_zh_TW.ts
windows/: installer.nsi  removeprevious.nsh
